--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="./style.css">
         <title>Awesome Website</title>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+        </style>
     </head>
 
     <body>
