Add "Some random information" section
Add "Some random information" section using flexbox. Include section
title, empty cards, and descriptions.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,41 @@
                 </div>
                 <img src="https://placekitten.com/525/230">
             </div>
-
         </header>
+
+        <section class="random-information">
+            <h1>Some random information.</h1>
+            <div class="information-cards">
+                <div class="card">
+                    <div class="card-outline">
+                    </div>
+                    <div class="card-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-outline">
+                    </div>
+                    <div class="card-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-outline">
+                    </div>
+                    <div class="card-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-outline">
+                    </div>
+                    <div class="card-text">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </body>
 </html>
