--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="./style.css">
         <title>Awesome Website</title>
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+            /* @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap'); */
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap');
         </style>
     </head>
 
@@ -65,6 +67,16 @@
                         this is some subtext under an illustration or image
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="quotation">
+            <div class="quote">
+                <div class="quote-text">
+                <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it.
+                Who knows? All I know is that it looks nice.</em>
+                </div>
+                <div class="author">Thor, God of Thunder</div>
             </div>
         </section>
 
