Add "call to action" section
* Add call to action card
* Modify button padding and border radius

--- a/index.html
+++ b/index.html
@@ -80,5 +80,16 @@
             </div>
         </section>
 
+        <section class="call-to-action">
+            <div class="cta-card">
+                <div class="cta-text">
+                    <h3>Call to action! It's time!</h3>
+                    Sign up for our product by clicking that button right over there!
+                </div>
+                <button id="cta-button">Sign up</button>
+            </div>
+
+        </section>
+
     </body>
 </html>
