--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <link rel="stylesheet" href="./style.css">
         <title>Awesome Website</title>
         <style>
-            /* @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-            @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap'); */
             @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap');
         </style>
     </head>
@@ -88,8 +86,11 @@
                 </div>
                 <button id="cta-button">Sign up</button>
             </div>
-
         </section>
+
+        <footer>
+            Copyright © The Odin Project 2021
+        </footer>
 
     </body>
 </html>
